--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(localdb)\\mssqllocaldb;Database=SWebProjetoFinal;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Default": "Server=(localdb)\\mssqllocaldb;Database=MoneyWiseDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
