--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(localdb)\\mssqllocaldb;Database=MoneyWiseDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Default": "Server=tcp:moneywise-server.database.windows.net,1433;Initial Catalog=MoneyWiseDB;Persist Security Info=False;User ID=adminmoneywise;Password=Admin_Moneywise_2025;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
